--- a/purchase.html
+++ b/purchase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оплата</title>
-    <link rel="stylesheet" href="purchase.css">
+    <link rel="stylesheet" href="styles/purchase.css">
     <!-- Ваши стили могут быть добавлены здесь -->
 </head>
 <body>
