--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="styles/search.css">
     <title>Поиск фильмов</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
         </form>
     </div>
     <div id="searchResults" class="results-container"></div>
-    <script src="search.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
