--- a/calendar.html
+++ b/calendar.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кинокалендарь</title>
-    <link rel="stylesheet" href="calendar.css">
+    <link rel="stylesheet" href="styles/calendar.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="calendar.js"></script>
+    <script src="js/calendar.js"></script>
 </head>
 <body>
 
