--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="categories.css">
+    <link rel="stylesheet" href="styles/categories.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>Movie Categories</title>
@@ -38,7 +38,7 @@
             <!-- Здесь будет отображаться контент для выбранной категории -->
         </div>
     </div>
-    <script src="categories.js"></script>
+    <script src="js/categories.js"></script>
 </body>
 
 </html>
