--- a/change_password.html
+++ b/change_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="change_password.css">
+    <link rel="stylesheet" href="styles/change_password.css">
     <title>Сменить пароль</title>
 </head>
 <body>
