--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="info.css">
+    <link rel="stylesheet" href="styles/info.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>{{ movie.title }}</title>
@@ -35,7 +35,7 @@
 
         </div>
     </div>
-    <script src="info.js"></script>
+    <script src="js/info.js"></script>
     
 </body>
 
