--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="register.css">
+  <link rel="stylesheet" href="styles/register.css">
   <title>HASH TECHIE OFFICIAL</title>
 </head>
 <body>
