--- a/calendar.html
+++ b/calendar.html
@@ -27,7 +27,7 @@
                 </td>
                 <td class="countdown-cell">
                     <div class="countdown">
-                        <h3>Выходит через:</h3>
+                        <h3>Release in :</h3>
                         <div id="timer1"></div>
                     </div>
                 </td>
@@ -40,12 +40,12 @@
                 </td>
                 <td class="countdown-cell">
                     <div class="countdown">
-                        <h3>Выходит через:</h3>
+                        <h3>Release in :</h3>
                         <div id="timer2"></div>
                     </div>
                 </td>
             </tr>
-        
+            
     </section>
 
 </body>
