--- a/categories.html
+++ b/categories.html
@@ -15,13 +15,12 @@
     <div class="navbar">
         <div class="navbar-container">
             <div class="logo-container">
-                <h1 class="logo">LOKI</h1>
+                <h1 class="logo">Categories</h1>
             </div>
             <div class="menu-container">
                 </ul>
             </div>
             <div class="profile-container">
-                <!-- Добавьте код для профиля, аналогичный предыдущему файлу -->
             </div>
             </div>
         </div>
@@ -35,7 +34,6 @@
     </div>
     <div class="container">
         <div class="content-container" id="moviesContainer">
-            <!-- Здесь будет отображаться контент для выбранной категории -->
         </div>
     </div>
     <script src="js/categories.js"></script>
