--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="menu-container">
                 <ul class="menu-list">
-                    <a href="info.html" class="menu-list-item active">Home</a>
+                    <a href="index.html" class="menu-list-item active">Home</a>
                     <a href="categories.html" class="menu-list-item">Movies</a>
                     <a href="myfilms.html" class="menu-list-item">Series</a>
                     <a href="auth.html" class="menu-list-item">Logout</a>
@@ -29,10 +29,10 @@
             </div>
             
             <div class="profile-container">
-                <img class="profile-picture" src="img/profile.jpg" alt="">
+                <img class="profile-picture" src="img/loki.jpeg" alt="">
                 <div class="profile-text-container">
-                  <span class="profile-text">Профиль</span>
-                  <i class="fas fa-caret-down"></i>
+                  <span class="profile-text">Hello</span>
+                  <i class="fas fa-caret-user"></i>
                 </div>
               </div>
               <div class="toggle">
@@ -108,40 +108,32 @@
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/8.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/9.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/10.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/11.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/12.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/1.jpg" alt="">
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/1.jpg" alt="">
-                            <span class="movie-list-item-title">Her</span>
-                            <button class="featured-button" onclick="watchMovie('https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D')">WATCH</button>
-
+                            <img class="movie-list-item-img" src="" alt="" data-movie-id="1">
+                            <button class="watch-button" data-movie-id="{{ movie.id }}">WATCH</button>
                         </div>
                     </div>
                     <i class="fas fa-chevron-right arrow"></i>
