--- a/auth.html
+++ b/auth.html
@@ -25,7 +25,7 @@
                     </div>
                     <button type="submit">Log in</button>
                     <div class="register">
-                        <p>Don't have an account <a href="register.html" class="login-link"><button type="button">Register</button></a></p>
+                        <p>Don't have an account <a href="/templates/register.html" class="login-link"><button type="button">Register</button></a></p>
                     </div>
                     {% if error %}
                         <p style="color: red;">{{ error }}</p>
