--- a/change_password.html
+++ b/change_password.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Название вашего сервиса</h1>
+        <h1>LOKI</h1>
     </header>
 
     <div class="container">
